--- a/02_Feature_Engineering.ipynb
+++ b/02_Feature_Engineering.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "02_Feature_Engineering.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -474,6 +475,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hJyKW3twZ5qF"
+      },
+      "source": [
+        "## Feature transformation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "RCzzOhL0eFBJ"
       },
       "source": [
@@ -733,6 +743,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "90mREKqLZxO_"
+      },
+      "source": [
+        "## Feature encoding"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UYLliLJp-D-J"
@@ -788,7 +807,7 @@
         "id": "JYWC612MgKZ8"
       },
       "source": [
-        "### Target transformation"
+        "## Target transformation"
       ]
     },
     {
@@ -879,7 +898,7 @@
         "id": "d416gxnng3Kf"
       },
       "source": [
-        "### Saving data"
+        "## Saving data"
       ]
     },
     {
