--- a/03_Train_Model.ipynb
+++ b/03_Train_Model.ipynb
@@ -35,6 +35,7 @@
         "import numpy as np\n",
         "from numpy import mean\n",
         "from numpy import std\n",
+        "from sklearn.metrics import mean_squared_error\n",
         "from sklearn.datasets import make_regression\n",
         "from sklearn.model_selection import cross_val_score\n",
         "from sklearn.model_selection import RepeatedKFold\n",
@@ -116,7 +117,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fXtF-7tOIdQZ",
-        "outputId": "5a31167a-4b7b-44e1-b24a-50e192eff75d"
+        "outputId": "f043191c-3006-4efd-e90d-0c44110553cf"
       },
       "source": [
         "# hyper-parameter tuning for XGBRegressor\n",
@@ -133,7 +134,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[09:41:44] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:50:06] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
             "Best hyperparameters for XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
             "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
             "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
@@ -141,7 +142,7 @@
             "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
             "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
             "             silent=None, subsample=1, verbosity=1) are:\n",
-            "{'n_estimators': 450, 'max_depth': 41, 'learning_rate': 0.05, 'iterations': 600}\n",
+            "{'n_estimators': 410, 'max_depth': 1, 'learning_rate': 1, 'iterations': 200}\n",
             "\n",
             "\n"
           ]
@@ -155,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "E1AFWXB1Ifp_",
-        "outputId": "04b79cdd-4c0e-4432-c6ba-4e55b7d140a2"
+        "outputId": "41f1d557-780a-42cf-9309-fd70a0aace86"
       },
       "source": [
         "# hyper-parameter tuning for LGBMRegressor\n",
@@ -185,7 +186,7 @@
             "              n_estimators=100, n_jobs=-1, num_leaves=31, objective=None,\n",
             "              random_state=None, reg_alpha=0.0, reg_lambda=0.0, silent=True,\n",
             "              subsample=1.0, subsample_for_bin=200000, subsample_freq=0) are:\n",
-            "{'colsample_bytree': 0.3, 'learning_rate': 0.04, 'max_bin': 222, 'max_depth': 11, 'min_child_samples': 1, 'num_leaves': 25, 'reg_alpha': 0.5, 'reg_lambda': 0.05, 'subsample': 0.7, 'subsample_freq': 173}\n",
+            "{'colsample_bytree': 0.5, 'learning_rate': 0.035, 'max_bin': 338, 'max_depth': 11, 'min_child_samples': 95, 'num_leaves': 175, 'reg_alpha': 0.01, 'reg_lambda': 1, 'subsample': 0.7, 'subsample_freq': 75}\n",
             "\n",
             "\n"
           ]
@@ -199,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-vRsvD_IIjTi",
-        "outputId": "ca181486-c9b3-47da-f138-ea4d9a7ae752"
+        "outputId": "5e8429b3-9276-4baf-ae1e-e2073677888f"
       },
       "source": [
         "# hyper-parameter tuning for SVR\n",
@@ -219,7 +220,7 @@
           "text": [
             "Best hyperparameters for SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma='scale',\n",
             "    kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False) are:\n",
-            "{'kernel': 'rbf', 'gamma': 0.0003, 'epsilon': 0.0175, 'C': 6}\n",
+            "{'kernel': 'rbf', 'gamma': 0.0003, 'epsilon': 0.001, 'C': 84}\n",
             "\n",
             "\n"
           ]
@@ -233,7 +234,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CqKzOcs7Ist1",
-        "outputId": "1ab9b746-bfb2-456f-dde9-b029ad9d095a"
+        "outputId": "f0e29b64-663e-4a3c-d3db-e1a8d5c103c4"
       },
       "source": [
         "# hyper-parameter tuning for Lasso\n",
@@ -254,7 +255,7 @@
             "Best hyperparameters for Lasso(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=1000,\n",
             "      normalize=False, positive=False, precompute=False, random_state=None,\n",
             "      selection='cyclic', tol=0.0001, warm_start=False) are:\n",
-            "{'tol': 1e-07, 'max_iter': 3000, 'alpha': 0.00064}\n",
+            "{'tol': 1e-07, 'max_iter': 3000, 'alpha': 0.00068}\n",
             "\n",
             "\n"
           ]
@@ -268,7 +269,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKpVW0w0IyRR",
-        "outputId": "fa44b909-c69f-47d8-8e26-19a485b66fa2"
+        "outputId": "080349fd-f615-4007-9f7a-f94e5099dcd1"
       },
       "source": [
         "# hyper-parameter tuning for ElasticNet\n",
@@ -287,7 +288,7 @@
             "Best hyperparameters for ElasticNet(alpha=1.0, copy_X=True, fit_intercept=True, l1_ratio=0.5,\n",
             "           max_iter=1000, normalize=False, positive=False, precompute=False,\n",
             "           random_state=None, selection='cyclic', tol=0.0001, warm_start=False) are:\n",
-            "{'tol': 1e-06, 'max_iter': 4000, 'l1_ratio': 0.38, 'alpha': 0.00088}\n",
+            "{'tol': 1e-06, 'max_iter': 4000, 'l1_ratio': 0.57, 'alpha': 0.00092}\n",
             "\n",
             "\n"
           ]
@@ -301,7 +302,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_pWq8VKFIzxp",
-        "outputId": "575fdf18-23dc-4503-da09-4b6a24ad2e08"
+        "outputId": "bd2c3796-1e51-48b9-b49d-bd6271f40b12"
       },
       "source": [
         "# hyper-parameter tuning for BayesianRidge\n",
@@ -324,7 +325,7 @@
             "              compute_score=False, copy_X=True, fit_intercept=True,\n",
             "              lambda_1=1e-06, lambda_2=1e-06, lambda_init=None, n_iter=300,\n",
             "              normalize=False, tol=0.001, verbose=False) are:\n",
-            "{'lambda_2': 8601.0, 'lambda_1': 31471.0, 'alpha_2': 62851.0, 'alpha_1': 37461.0}\n",
+            "{'lambda_2': 6571.0, 'lambda_1': 50131.0, 'alpha_2': 80741.0, 'alpha_1': 97331.0}\n",
             "\n",
             "\n"
           ]
@@ -337,8 +338,36 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "14079Q0gXeN7",
+        "outputId": "2da0b699-bc69-48a3-c6f7-eb9f4b505278"
+      },
+      "source": [
+        "xg = XGBRegressor(**xgboost_best_params)\n",
+        "xg.fit(X_train, y_train)\n",
+        "y_train_predicted = xg.predict(X_train)\n",
+        "\n",
+        "print(\"RMSE on train data using xg_boost model: \",mean_squared_error(y_train, np.expm1(y_train_predicted), squared=False))"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[15:46:04] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "RMSE on train data using xg_boost model:  196008.3596073959\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "sjACSFg0I571",
-        "outputId": "cff9077f-4453-4cd4-89a8-1a03c802976d"
+        "outputId": "aac318e4-0723-4f80-8563-f3758e218c43"
       },
       "source": [
         "# define the base models\n",
@@ -357,7 +386,7 @@
         "# fit the model on all available data\n",
         "model.fit(X_train, y_train)\n",
         "# make a prediction for one example\n",
-        "yhat = model.predict(X_test)\n"
+        "yhat = model.predict(X_test)"
       ],
       "execution_count": 10,
       "outputs": [
@@ -365,12 +394,37 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[09:45:32] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "[09:45:53] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "[09:46:06] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "[09:46:18] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "[09:46:31] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "[09:46:44] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+            "[14:54:18] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:54:24] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:54:25] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:54:27] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:54:28] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
+            "[14:54:30] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ejtdlxf-Yn7T",
+        "outputId": "3da5d921-7b5c-495f-d583-f362e5f8569f"
+      },
+      "source": [
+        "y_train_predicted = model.predict(X_train)\n",
+        "\n",
+        "print(\"RMSE on train data using ensemble model: \",mean_squared_error(y_train, np.expm1(y_train_predicted), squared=False))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RMSE on train data using ensemble model:  193824.49101262522\n"
           ]
         }
       ]
@@ -383,7 +437,7 @@
           "height": 17
         },
         "id": "eWe-Bb5zI-Cj",
-        "outputId": "0bb4882a-b37e-4016-c2a5-7343f6ae64ba"
+        "outputId": "d5dd9aff-5402-493d-ba87-0099f3b94129"
       },
       "source": [
         "# predicting on test data\n",
@@ -450,7 +504,7 @@
           "output_type": "display_data",
           "data": {
             "application/javascript": [
-              "download(\"download_4a44bceb-f521-48b2-9c86-434a5aad1376\", \"submission.csv\", 34425)"
+              "download(\"download_364a6cc3-ec27-4748-b6fa-0f4ddf4b5c57\", \"submission.csv\", 34406)"
             ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
